# p2p2p

./: .gitignore  Makefile  README.md  messages.proto
go/: .gitignore  Makefile  README.txt  client.env  go.mod  go.sum  server.env
go/cmd/client/: main.go
go/cmd/proto/: main_test.go
go/cmd/server/: main.go
go/pb/message/: message.pb.go
go/pb/security/: security.pb.go
go/pkg/config/: config.go
go/pkg/connection/: connection.go  connection_test.go  dh.go  rsa.go  rsa_test.go
go/pkg/files/: encryption.go  encryption_test.go  known_files.go  main.go
go/pkg/io/: files.go  io.go  io_test.go
go/pkg/logging/: logger.go
go/pkg/mdns/: known_hosts.go  mdns.go
go/pkg/message/: message.go
go/pkg/security/: connection.go  connection_test.go  dh.go  encryption.go  encryption_test.go  file_encryption.go  file_encryption_test.go  rsa.go  rsa_test.go  verification.go
go/types/message/: message.pb.go
go/types/security/: security.pb.go
pb/: message.proto  security.proto
python/: .gitignore  README.txt  browser.py  client.py  compile_command  message_pb2.py  peer1.py  requirements.txt  resolver.py  results.txt  security_pb2.py  server.py
python/keys/: rsaprivkey.pem  rsapubkey.pub
python/pb/: message_pb2.py
python/tests/: test_message.py  test_util.py
python/util/: browser.py  encryption.py  hash.py  intro.py  local.py  message.py  rsa.py
rust/: Cargo.toml  README.md  build.rs  demo1.webm
rust/src/: logic.rs  main.rs  mdns.rs  state.rs  tcp.rs
