[package]
name = "p2p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.5"
rsa = { version = "0.9", features = ["sha2"] }
x25519-dalek = "2.0"
gethostname = "1"
mdns-sd = "0.13.3"
local-ip-address = "0.6.3"
lazy_static = "1.5.0"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13.5"
