[package]
name = "p2p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.5"
rsa = { version = "0.9", features = ["sha2"] }
x25519-dalek = "2.0"
gethostname = "1"
mdns-sd = "0.13.3"
local-ip-address = "0.6.3"
lazy_static = "1.5.0"
hex = "0.4.3"
aes-gcm = "0.10.3"
num-traits = "0.2.19"
rustyline = "15.0.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
log = "0.4.26"
env_logger = "0.11.7"

[build-dependencies]
prost-build = "0.13.5"
